[metadata]
name = cpu-power.py
version = 0.1.1
author = six-two
author_email = pip@six-two.dev
description = Set Linux CPU power settings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/six-two/cpu-power.py
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.9
scripts =
    bin/cpu-power

[options.packages.find]
where = src
